# claudedit

./: README.md  claudedit.py  pyproject.toml  user_manual.md
src/claudedit/: claudedit.py  main.py
src/vimdown/: file_tree.py  main.py  main_alt.py  markdown_formatter.py  modal_dialogs.py  vim_modes.py
tests/: test_suite.py
