[project]
name = "vimdown"
version = "0.2.0"
description = "A full-featured terminal markdown editor"
dependencies = [
    "textual>=0.41.0",
    "rich>=13.0.0",
]

[project.scripts]
vimdown = "vimdown.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

